# fuzzball

./: .cirrus.yml  .env  .gitignore  .travis.yml  Dockerfile  Doxyfile  LICENSE.md  Makefile.in  README.md  README_DOCKER.md  README_LINUX.md  README_SMTP.md  README_UNIX.md  README_WINDOWS.md  STYLE.md  appveyor.yml  conanfile.txt  configure  configure.ac  dbobject.go  dbobject_test.go  dbref.go  dbref_test.go  docker-compose.yml  entrypoint.bash  errors.go  fbmuck.spec  foxen9.go  foxen9_test.go  fuzzball.cnf  lvllog.go  lvllog_test.go  makefile.win
.github/workflows/: main.yml
auto/: build-demo.py  requirements.txt
buildconfigs/: linux-debug.conf  linux-release.conf
data/: mpihelp.txt
dbs/advancedb/: README
dbs/basedb/: README
dbs/minimal/: README
dbs/starterdb/: README
docs/: changesfb7  help.txt  index.html  man.txt  mpihelp.html  mpihelp.txt  muckhelp.html  mufman.html
docs/historical/: CHANGESfb5  changesfb  changesfb2  changesfb3  changesfb4  changesfb6  deletethis  oldlicense
docs/info/: mpi-intro2  muf-tutorial
fbmuck/: COMPILING  INSTALLATION  Makefile.in  README  README.ssl  configure  configure.ac  configure.in  fbmuck.spec  fuzzball.cnf  makefile.win
fbmuck/auto/: mkinstalldirs
fbmuck/contrib/jresolver/: Makefile  Resolver.MF  resolver
fbmuck/contrib/jresolver/org/: Makefile
fbmuck/contrib/jresolver/org/fuzzball/: Makefile  Resolver.java  ResolverHandler.java
fbmuck/contrib/muv/: Makefile  README  loopy.muv  muv.sh  parse_rules.y
fbmuck/contrib/xml/: fbmuck606.xml
fbmuck/dbs/advancedb/: README
fbmuck/dbs/advancedb/data/: base6.db  wordlist.txt
fbmuck/dbs/advancedb/muf/: 10.m  13.m  152.m  2.m  24.m  25.m  3.m  30.m  32.m  34.m  37.m  44.m  45.m  46.m  48.m  49.m  5.m  51.m  54.m  55.m  57.m  59.m  6.m  60.m  63.m  66.m  67.m  69.m  7.m  70.m  71.m  72.m  74.m  75.m  78.m  80.m  84.m  87.m  macros
fbmuck/dbs/basedb/data/: base.db
fbmuck/dbs/basedb/muf/: 10.m  13.m  15.m  18.m  23.m  25.m  34.m  43.m  44.m  53.m  9.m  macros
fbmuck/dbs/fb-base/data/: fb-base.db
fbmuck/dbs/fb-base/muf/: 12.m  13.m  14.m  15.m  16.m  18.m  2.m  22.m  6.m  macros
fbmuck/docs/: 8-bit  COPYING  Documentation  MUF-tutorial  MUF.examples  MUF.manual  REPORTING  SUPPORT  help.txt  mcp-gui.html  mpi-intro.html  mpi-intro2  mpihelp.html  muckhelp.html  mufman.html  sample.policies
fbmuck/docs/devel/: adding-tune.txt
fbmuck/docs/historical/: technical.doc
fbmuck/game/: optimdb  restart.in  resurrect
fbmuck/game/data/: README  credits.txt  edit-help.txt  help.txt  macro.hlp  man.txt  motd.txt  mpihelp.raw  mpihelp.txt  muckhelp.raw  mufman.raw
fbmuck/game/data/info/: mpidocs  mpidocs2  muckhelp  muf-cheat  mufman1  new.muf  new.prims  players-newstuff
fbmuck/game/logs/: README
fbmuck/include/: .indent.pro  array.h  autoconf.h.in  config.h  copyright.h  crt_malloc.h  db.h  db_header.h  dbsearch.h  defaults.h  diskprop.h  externs-auto.h  externs.h  fb.h  fbstrings.h  inst.h  interface.h  interp.h  match.h  mcp.h  mcpgui.h  mcppkg.h  mfun.h  mfunlist.h  mpi.h  msgparse.h  mufevent.h  p_array.h  p_connects.h  p_db.h  p_error.h  p_float.h  p_math.h  p_mcp.h  p_misc.h  p_props.h  p_regex.h  p_stack.h  p_strings.h  params.h  (+7 more)
fbmuck/scripts/: fbmuck-add  fbmuck-redhat-init  fbmuck-sysvinit  start-muck.sh
fbmuck/src/: ==WARNING==  Arrayideas  BUG_FORM  CHANGESfb6  DISKBASE  Descr_ToDo  FLAGS  FREECRASH  GUIPRIMS.txt  Listitall  Makefile.in  TO.DO  TODO  TUNES.TXT  WOSSM  announce.c  array.c  boolexp.c  buildwarns  compile.c  compress.c  copyright.c  create.c  crt_malloc.c  db.c  db_header.c  debugger.c  disassem.c  diskprop.c  edit.c  events.c  game.c  hashtab.c  help.c  inst.c  interface.c  interp.c  log.c  look.c  match.c  (+52 more)
fbmuck/src/BUGS/: CLEARBUG  FORCEBUG  MPIPERMS  RENAMEBUG
fbmuck/src/BUGS/fixed/: PROPLOSSBUG
fbmuck/src/IDEAS/: DebugPrims  Exceptions  MCP-Cords  MUV_BNF  MuvParse.c  OOMUF  Sockets
fbmuck/src/helptk/: combobox.tcl  tree.tcl
fbmuck/src_docs/: README  driver.txt  game.c.txt  interface.c.txt  interp.c.txt
fbmuck/win32/: README.TXT  autoconf.h  defines.h  makefile.win  pcre.h  pcre.lib  precompile.bat  restart.cpp  version.cpp  version.tpl  win32.cpp  win32.h
fbmuf/: MOSS-convpmail.muf  ReadMe  cmd-3who.muf  cmd-@archive.muf  cmd-@bansite.muf  cmd-@bringitdown.muf  cmd-@check.muf  cmd-@doing.muf  cmd-@exits.muf  cmd-@ignore.muf  cmd-@image.muf  cmd-@muf.muf  cmd-@objeditgui.muf  cmd-@purge.muf  cmd-@register.muf  cmd-@restart.muf  cmd-@sizer.muf  cmd-@tunegui.muf  cmd-@view.muf  cmd-@wall.muf  cmd-@when.muf  cmd-ansitest.mpi  cmd-bbsgui.muf  cmd-benchmark.muf  cmd-bootall.muf  cmd-change.muf  cmd-edit.muf  cmd-fetch.muf  cmd-guitest.muf  cmd-lookat.muf  cmd-lsedit.muf  cmd-lsprop.muf  cmd-mv-cp.muf  cmd-newwa.muf  cmd-optguitest.muf  cmd-page.muf  cmd-pose.muf  cmd-put.muf  cmd-sweep.muf  cmd-uptime.muf  (+40 more)
fbmuf/GreyWolf/: attr.txt  gindex.txt  (+1 more)
game/: restart.in
include/: array.h  autoconf.h.in  boolexp.h  color.h  commands.h  compile.h  config.h  crt_malloc.h  db.h  dbsearch.h  debugger.h  defaults.h  diskprop.h  edit.h  events.h  externs.h  fbmath.h  fbmuck.h  fbsignal.h  fbstrings.h  fbtime.h  flags.h  game.h  hashtab.h  inst.h  interface.h  interface_ssl.h  interp.h  log.h  look.h  match.h  mcp.h  mcpgui.h  mcppkg.h  mfun.h  mfunlist.h  move.h  mpi.h  msgparse.h  mufevent.h  (+23 more)
scripts/: descrcon-lib.muf  docker-entrypoint.sh  fbmuck-add  fbmuck-redhat-init  fbmuck-sysvinit  teledump-extract.py  trigger-dump.muf  trigger-dump.py
src/: .indent.pro  .splintrc  Makefile.in  array.c  boolexp.c  compile.c  create.c  crt_malloc.c  db.c  debugger.c  disassem.c  diskprop.c  edit.c  events.c  fbmath.c  fbsignal.c  fbstrings.c  fbtime.c  flags.c  game.c  hashtab.c  help.c  inst.c  interface.c  interface_ssl.c  interp.c  log.c  look.c  match.c  mcp.c  mcpgui.c  mcppkgs.c  mfuns.c  mfuns2.c  mkversion.c  move.c  mpihelp.raw  msgparse.c  muckhelp.raw  mufevent.c  (+40 more)
tests/: command_test.py  test_command.py  test_invariant_mcp.c  test_util.py
win32/: README.TXT  autoconf.h  defines.h  restart.cpp  win32.c  win32.h
(+314 files in other folders)
